styles/globals.css
/* Global variables */
:root {
    --theme-transition-duration: 0.5s;
    --theme-transition-func: ease;
}

body {
    align-items: center;
    background-color: rgb(34, 34, 50);
    display: flex;
    flex-direction: column;
    font-family: monospace;
    justify-content: center;
    text-align: center;
}

a {
    all: unset;
}

#main-div {
    background-color: white;
    border-radius: 10px 10px 10px 10px;
    color: rgb(31, 31, 31);
    /* height: 100vh; */
    /* margin-right: 20px; */
    max-width: 2000px;
    padding-bottom: 10px;
    padding-top: 10px;
    position: relative;
    width: 100%;
    &.themable {
        transition-property: background-color, color;
        transition-timing-function: var(--theme-transition-func);
        transition-duration: var(--theme-transition-duration);
    }
    &.dark {
        background-color: rgb(31, 31, 31);
        color: rgb(224, 224, 224);
    }
}

/* Theme mode toggle button */
#theme-toggle-button-container {
    align-items: center;
    background-color: rgb(31, 31, 31);
    border-radius: 15px;
    cursor: pointer;
    display: flex;
    height: 30px;
    justify-content: flex-start;
    left: 20px;
    position: absolute;
    top: 30px;
    width: 60px;
    &.themable {
        transition-property: background-color;
        transition-timing-function: var(--theme-transition-func);
        transition-duration: var(--theme-transition-duration);
    }
    &.dark {
        background-color: rgb(224, 224, 224);
    }
}

#theme-toggle-button {
    border-radius: 50%;
    height: 24px;
    margin-left: 5px;
    position: relative;
    transform: translateX(0px);
    transition: transform ease-out 0.2s;
    width: 24px;
    & > img {
        height: auto;
        max-height: 20px;
        opacity: 0;
        position: absolute;
        top: 2px;
        transition: opacity ease 0.2s, transform ease 0.4s;
        -webkit-user-select: none;
        user-select: none;
        width: auto;
    }
    &.dark {
        transform: translateX(26px);
    }
}

#sun-img {
    left: 2px;
}

#moon-img {
    left: 5px;
}

#theme-toggle-button.light > img {
    &#sun-img {
        transform: rotate(0);
    }
    &#moon-img {
        transform: rotate(-0.25turn);
    }
}

#theme-toggle-button.dark > img {
    &#sun-img {
        transform: rotate(0.25turn);
    }
    &#moon-img {
        transform: rotate(0);
    }
}

/* Language buttons */
#language-flags {
    position: absolute;
    right: 20px;
    top: 30px;
}

#language-flags > img {
    box-shadow: 5px 5px 10px rgb(31, 31, 31, 0.4);
    cursor: pointer;
    height: auto;
    width: 50px;
    &.themable {
        transition-property: box-shadow, transform;
        transition-timing-function: var(--theme-transition-func), ease;
        transition-duration: 0.2s, 0.2s;
    }
    &:hover {
        box-shadow: 5px 5px 15px rgb(31, 31, 31, 0.2);
        transform: scale(1.1, 1.1);
    }
    &:active {
        box-shadow: 3px 3px 5px rgb(31, 31, 31, 0.5);
        transform: scale(0.9, 0.9);
    }
}

#language-flags > img.dark {
    box-shadow: 5px 5px 10px rgb(224, 224, 224, 0.4);
    &:hover {
        box-shadow: 5px 5px 15px rgb(224, 224, 224, 0.2);
    }
    &:active {
        box-shadow: 3px 3px 5px rgb(224, 224, 224, 0.5);
    }
}

/* Footer */
footer {
    border-radius: 0 0 10px 10px;
    & p {
        margin: 0;
    }
}

address {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 10px;
    & p {
        font-style: normal;
    }
    & img {
        cursor: pointer;
        height: 30px;
        margin-left: 10px;
        margin-right: 5px;
        width: auto;
    }
}

#copyright-and-version {
    display: inline-flex;
    & p {
        color: rgb(160, 160, 160);
    }
    & p {
        color: rgb(120, 120, 120);
    }
    & a {
        cursor: pointer;
        text-decoration: underline;
    }
    & a:hover {
        color: rgb(70, 70, 70);
    }
    & a:active {
        color: rgb(31, 31, 31);
    }

    & a.dark:hover {
        color: rgb(200, 200, 200);
    }
    & a.dark:active {
        color: rgb(224, 224, 224);
    }
}

